feat: add backend API proxy to protect DeepSeek API key
- Add Vercel serverless function (api/translate.ts) as secure proxy
- Refactor geminiService.ts to call /api/translate endpoint
- Add Vite dev middleware for local development without Vercel CLI
- Rename env variable to DEEPSEEK_API_KEY (server-side only)
- Add .env.example with setup instructions
- Add .github/copilot-instructions.md for AI agent guidance
- Remove unused @google/genai dependency

--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:api": "vercel dev --listen 3001",
+    "dev:full": "concurrently \"npm run dev\" \"npm run dev:api\"",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "react": "^19.2.3",
-    "@google/genai": "^1.38.0",
     "lucide-react": "^0.562.0",
     "pdfjs-dist": "4.8.69",
     "react-dom": "^19.2.3",
@@ -18,7 +19,9 @@
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
+    "@vercel/node": "^3.0.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "concurrently": "^8.2.2",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
